refactor: swap to more modern pandas methods

--- a/notebook/cleaning.ipynb
+++ b/notebook/cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 58,
    "id": "2675285c",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "id": "82dc0501",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 60,
    "id": "301e4e4b",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "id": "78f42378",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 62,
    "id": "65edc6be",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 63,
    "id": "0f6ead8d",
    "metadata": {},
    "outputs": [
@@ -323,13 +323,13 @@
    ],
    "source": [
     "# DROP NATURES USED FOR FILTERING TO CONCAT LATER\n",
-    "gen_df.drop(\"nature_of_payment_or_transfer_of_value\", axis=1, inplace=True)\n",
+    "gen_df.drop(columns=[\"nature_of_payment_or_transfer_of_value\"], inplace=True)\n",
     "display(gen_df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 64,
    "id": "828a8e45",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 65,
    "id": "7e1441e0",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "764e8581",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
    "id": "f4cdaf1e",
    "metadata": {},
    "outputs": [],
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 68,
    "id": "10f3443a",
    "metadata": {},
    "outputs": [],
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 69,
    "id": "0a1875c2",
    "metadata": {},
    "outputs": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 70,
    "id": "b0341b48",
    "metadata": {},
    "outputs": [
@@ -827,7 +827,7 @@
        "489          2024          general  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 71,
    "id": "c94de92b",
    "metadata": {},
    "outputs": [
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 72,
    "id": "7b07ca89",
    "metadata": {},
    "outputs": [
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 73,
    "id": "8915f9da",
    "metadata": {},
    "outputs": [
@@ -1252,14 +1252,339 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 74,
    "id": "6e107fa5",
    "metadata": {},
    "outputs": [],
    "source": [
     "export_path = Path(\"../exports/cms_unified_2024.csv\")\n",
-    "export_path.parent.mkdir(parents=True, exist_ok=True)\n",
-    "unified_df.to_csv(export_path, index=False, encoding=\"utf-8\")"
+    "#export_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "#unified_df.to_csv(export_path, index=False, encoding=\"utf-8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "675d19fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>covered_recipient_profile_id</th>\n",
+       "      <th>covered_recipient_npi</th>\n",
+       "      <th>covered_recipient_first_name</th>\n",
+       "      <th>covered_recipient_last_name</th>\n",
+       "      <th>recipient_city</th>\n",
+       "      <th>recipient_state</th>\n",
+       "      <th>applicable_manufacturer_or_applicable_gpo_making_payment_id</th>\n",
+       "      <th>applicable_manufacturer_or_applicable_gpo_making_payment_name</th>\n",
+       "      <th>name_of_drug_or_biological_or_device_or_medical_supply_1</th>\n",
+       "      <th>total_amount_of_payment_usdollars</th>\n",
+       "      <th>date_of_payment</th>\n",
+       "      <th>record_id</th>\n",
+       "      <th>program_year</th>\n",
+       "      <th>transaction_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>226233</th>\n",
+       "      <td>271171</td>\n",
+       "      <td>1962601047</td>\n",
+       "      <td>MOHAMMADBAGHER</td>\n",
+       "      <td>ZIARI</td>\n",
+       "      <td>Corona</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>100000136416</td>\n",
+       "      <td>Regeneron Healthcare Solutions, Inc.</td>\n",
+       "      <td>LIBTAYO</td>\n",
+       "      <td>3136.00</td>\n",
+       "      <td>2024-10-24</td>\n",
+       "      <td>1114262157</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>general</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133329</th>\n",
+       "      <td>27964</td>\n",
+       "      <td>1619023223</td>\n",
+       "      <td>Syed</td>\n",
+       "      <td>Mustafa</td>\n",
+       "      <td>Rochester</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>100000000146</td>\n",
+       "      <td>AstraZeneca Pharmaceuticals LP</td>\n",
+       "      <td>FASENRA</td>\n",
+       "      <td>2150.00</td>\n",
+       "      <td>2024-06-28</td>\n",
+       "      <td>1104462594</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>general</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364435</th>\n",
+       "      <td>193455</td>\n",
+       "      <td>1275624660</td>\n",
+       "      <td>RAJVEER</td>\n",
+       "      <td>SACHDEV</td>\n",
+       "      <td>Garnerville</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>100000000066</td>\n",
+       "      <td>Lilly USA, LLC</td>\n",
+       "      <td>MOUNJARO</td>\n",
+       "      <td>750.00</td>\n",
+       "      <td>2024-01-25</td>\n",
+       "      <td>1135330749</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>general</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>401880</th>\n",
+       "      <td>23618</td>\n",
+       "      <td>1528008588</td>\n",
+       "      <td>R</td>\n",
+       "      <td>RASMUSSEN</td>\n",
+       "      <td>Provo</td>\n",
+       "      <td>UT</td>\n",
+       "      <td>100000005384</td>\n",
+       "      <td>INTUITIVE SURGICAL, INC.</td>\n",
+       "      <td>Da Vinci Surgical System</td>\n",
+       "      <td>2000.00</td>\n",
+       "      <td>2024-02-14</td>\n",
+       "      <td>1137239443</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>general</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>367952</th>\n",
+       "      <td>258371</td>\n",
+       "      <td>1689867434</td>\n",
+       "      <td>JONATHON</td>\n",
+       "      <td>CHAPMAN</td>\n",
+       "      <td>Baton Rouge</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>100000000066</td>\n",
+       "      <td>Lilly USA, LLC</td>\n",
+       "      <td>OMVOH</td>\n",
+       "      <td>2500.00</td>\n",
+       "      <td>2024-06-10</td>\n",
+       "      <td>1135080936</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>general</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>401349</th>\n",
+       "      <td>8176691</td>\n",
+       "      <td>1821400839</td>\n",
+       "      <td>JAMIE</td>\n",
+       "      <td>TUNG</td>\n",
+       "      <td>Palo Alto</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>100000005384</td>\n",
+       "      <td>INTUITIVE SURGICAL, INC.</td>\n",
+       "      <td>DAVINCI XI</td>\n",
+       "      <td>1000.00</td>\n",
+       "      <td>2024-06-12</td>\n",
+       "      <td>1137226449</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>general</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>456824</th>\n",
+       "      <td>11344113</td>\n",
+       "      <td>1033567409</td>\n",
+       "      <td>SEYED</td>\n",
+       "      <td>ABEDI</td>\n",
+       "      <td>Cedar Park</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>100000000263</td>\n",
+       "      <td>Incyte Corporation</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>74.99</td>\n",
+       "      <td>2024-12-04</td>\n",
+       "      <td>1141273020</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>general</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>603354</th>\n",
+       "      <td>1022999</td>\n",
+       "      <td>1164643094</td>\n",
+       "      <td>AMY</td>\n",
+       "      <td>GIMLEN</td>\n",
+       "      <td>Manhattan Beach</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>100000005613</td>\n",
+       "      <td>Align Technology, Inc.</td>\n",
+       "      <td>Invisalign</td>\n",
+       "      <td>75.00</td>\n",
+       "      <td>2024-02-20</td>\n",
+       "      <td>1153235006</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>general</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>431835</th>\n",
+       "      <td>11076366</td>\n",
+       "      <td>1538792833</td>\n",
+       "      <td>JENNIFER</td>\n",
+       "      <td>MCBAIN</td>\n",
+       "      <td>Albany</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>100000000137</td>\n",
+       "      <td>Astellas Pharma US Inc</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>84.99</td>\n",
+       "      <td>2024-04-22</td>\n",
+       "      <td>1139508129</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>general</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167641</th>\n",
+       "      <td>71913</td>\n",
+       "      <td>1578858973</td>\n",
+       "      <td>ALIREZA</td>\n",
+       "      <td>ASHRAFI</td>\n",
+       "      <td>Middleboro</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>100000005689</td>\n",
+       "      <td>Straumann USA LLC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>33.24</td>\n",
+       "      <td>2024-04-08</td>\n",
+       "      <td>1106601716</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>general</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        covered_recipient_profile_id  covered_recipient_npi  \\\n",
+       "226233                        271171             1962601047   \n",
+       "133329                         27964             1619023223   \n",
+       "364435                        193455             1275624660   \n",
+       "401880                         23618             1528008588   \n",
+       "367952                        258371             1689867434   \n",
+       "401349                       8176691             1821400839   \n",
+       "456824                      11344113             1033567409   \n",
+       "603354                       1022999             1164643094   \n",
+       "431835                      11076366             1538792833   \n",
+       "167641                         71913             1578858973   \n",
+       "\n",
+       "       covered_recipient_first_name covered_recipient_last_name  \\\n",
+       "226233               MOHAMMADBAGHER                       ZIARI   \n",
+       "133329                         Syed                     Mustafa   \n",
+       "364435                      RAJVEER                     SACHDEV   \n",
+       "401880                            R                   RASMUSSEN   \n",
+       "367952                     JONATHON                     CHAPMAN   \n",
+       "401349                        JAMIE                        TUNG   \n",
+       "456824                        SEYED                       ABEDI   \n",
+       "603354                          AMY                      GIMLEN   \n",
+       "431835                     JENNIFER                      MCBAIN   \n",
+       "167641                      ALIREZA                     ASHRAFI   \n",
+       "\n",
+       "         recipient_city recipient_state  \\\n",
+       "226233           Corona              CA   \n",
+       "133329        Rochester              NY   \n",
+       "364435      Garnerville              NY   \n",
+       "401880            Provo              UT   \n",
+       "367952      Baton Rouge              LA   \n",
+       "401349        Palo Alto              CA   \n",
+       "456824       Cedar Park              TX   \n",
+       "603354  Manhattan Beach              CA   \n",
+       "431835           Albany              NY   \n",
+       "167641       Middleboro              MA   \n",
+       "\n",
+       "        applicable_manufacturer_or_applicable_gpo_making_payment_id  \\\n",
+       "226233                                       100000136416             \n",
+       "133329                                       100000000146             \n",
+       "364435                                       100000000066             \n",
+       "401880                                       100000005384             \n",
+       "367952                                       100000000066             \n",
+       "401349                                       100000005384             \n",
+       "456824                                       100000000263             \n",
+       "603354                                       100000005613             \n",
+       "431835                                       100000000137             \n",
+       "167641                                       100000005689             \n",
+       "\n",
+       "       applicable_manufacturer_or_applicable_gpo_making_payment_name  \\\n",
+       "226233               Regeneron Healthcare Solutions, Inc.              \n",
+       "133329                     AstraZeneca Pharmaceuticals LP              \n",
+       "364435                                     Lilly USA, LLC              \n",
+       "401880                           INTUITIVE SURGICAL, INC.              \n",
+       "367952                                     Lilly USA, LLC              \n",
+       "401349                           INTUITIVE SURGICAL, INC.              \n",
+       "456824                                 Incyte Corporation              \n",
+       "603354                             Align Technology, Inc.              \n",
+       "431835                             Astellas Pharma US Inc              \n",
+       "167641                                  Straumann USA LLC              \n",
+       "\n",
+       "       name_of_drug_or_biological_or_device_or_medical_supply_1  \\\n",
+       "226233                                            LIBTAYO         \n",
+       "133329                                            FASENRA         \n",
+       "364435                                           MOUNJARO         \n",
+       "401880                           Da Vinci Surgical System         \n",
+       "367952                                              OMVOH         \n",
+       "401349                                         DAVINCI XI         \n",
+       "456824                                                NaN         \n",
+       "603354                                         Invisalign         \n",
+       "431835                                                NaN         \n",
+       "167641                                                NaN         \n",
+       "\n",
+       "        total_amount_of_payment_usdollars date_of_payment   record_id  \\\n",
+       "226233                            3136.00      2024-10-24  1114262157   \n",
+       "133329                            2150.00      2024-06-28  1104462594   \n",
+       "364435                             750.00      2024-01-25  1135330749   \n",
+       "401880                            2000.00      2024-02-14  1137239443   \n",
+       "367952                            2500.00      2024-06-10  1135080936   \n",
+       "401349                            1000.00      2024-06-12  1137226449   \n",
+       "456824                              74.99      2024-12-04  1141273020   \n",
+       "603354                              75.00      2024-02-20  1153235006   \n",
+       "431835                              84.99      2024-04-22  1139508129   \n",
+       "167641                              33.24      2024-04-08  1106601716   \n",
+       "\n",
+       "        program_year transaction_type  \n",
+       "226233          2024          general  \n",
+       "133329          2024          general  \n",
+       "364435          2024          general  \n",
+       "401880          2024          general  \n",
+       "367952          2024          general  \n",
+       "401349          2024          general  \n",
+       "456824          2024          general  \n",
+       "603354          2024          general  \n",
+       "431835          2024          general  \n",
+       "167641          2024          general  "
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unified_df.sample(10)"
    ]
   }
  ],
